--- a/src/static/index.html
+++ b/src/static/index.html
@@ -19,15 +19,13 @@
       <!-- Save Chat Button -->
       <button id="saveButton" onclick="saveChat()">Save Chat</button>
       <div class="messages" id="messages"></div>
-      <div class="input-container">
-        <input
-          type="text"
-          id="inputBox"
-          placeholder="Type your message here..."
-        />
-        <button id="sendButton" onclick="sendMessage()">Send</button>
-      </div>
+  <!-- Input Container Outside Chat Container -->
+  <div class="input-wrapper">
+    <div class="input-container">
+      <input type="text" id="inputBox" placeholder="Type your message here..." />
+      <button id="sendButton" onclick="sendMessage()">Send</button>
     </div>
+  </div>
 
     <script>
       let editingMessageElement = null; // Track the element being edited
