--- a/src/static/index.html
+++ b/src/static/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="static/styles/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-python.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
+
   </head>
 
   <body>
