--- a/src/static/index.html
+++ b/src/static/index.html
@@ -13,21 +13,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-python.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
-
   </head>
 
   <body>
     <div class="chat-container">
       <h1>Chat with llama3.1</h1>
       <!-- Save and clear chat buttons -->
-      <button id="saveButton" onclick="saveChat()">Save Chat</button>
-      <button id="clearButton" onclick="clearChat()">Clear Chat</button>
+      <button id="saveButton">Save Chat</button>
+      <button id="clearButton">Clear Chat</button>
       <div class="messages" id="messages"></div>
       <!-- Input container -->
       <div class="input-wrapper">
         <div class="input-container">
           <input type="text" id="inputBox" placeholder="Type your message here..." />
-          <button id="sendButton" onclick="sendMessage()">Send</button>
+          <button id="sendButton">Send</button>
         </div>
       </div>
     </div>
