--- a/src/static/index.html
+++ b/src/static/index.html
@@ -71,6 +71,6 @@
         </div>
       </div>
     </div>
-    <script src="static/js/script.js"></script>
+    <script type="module" src="static/js/script.js"></script>
   </body>
 </html>
