improve frontend tests

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -52,6 +52,7 @@
         <div class="input-container">
           <textarea
             id="inputBox"
+            aria-label="User input"
             rows="2"
             placeholder="Type your message here..."
           ></textarea>
