implement search and highlight match

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -34,15 +34,19 @@
         <!-- Llama or related icon -->
         <h1>Chat with llama3.1</h1>
         <div class="button-group">
+
+          <!-- Search Chat Button -->
+          <button id="searchButton" title="Search Chat">
+            <i class="fas fa-search"></i>
+          </button>
+
           <button id="saveButton" title="Save Chat">
             <i class="fas fa-save"></i>
-            <!-- Replace text with icon -->
           </button>
 
           <!-- Clear Chat Button -->
           <button id="clearButton" title="Clear Chat">
             <i class="fas fa-trash"></i>
-            <!-- Replace text with icon -->
           </button>
         </div>
       </div>
