--- a/src/static/index.html
+++ b/src/static/index.html
@@ -79,6 +79,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="static/js/script.js"></script>
+    <script type="module" src="static/js/main.js"></script>
   </body>
 </html>
