--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,7 +16,14 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="static/styles/style.css" />
+    <link rel="stylesheet" href="static/styles/reset.css" />
+    <link rel="stylesheet" href="static/styles/layout.css" />
+    <link rel="stylesheet" href="static/styles/messages.css" />
+    <link rel="stylesheet" href="static/styles/buttons.css" />
+    <link rel="stylesheet" href="static/styles/diagrams.css" />
+    <link rel="stylesheet" href="static/styles/syntax.css" />
+    <link rel="stylesheet" href="static/styles/spinner.css" />
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-python.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
@@ -34,7 +41,6 @@
         <!-- Llama or related icon -->
         <h1>Chat with llama3.1</h1>
         <div class="button-group">
-
           <!-- Search Chat Button -->
           <button id="searchButton" title="Search Chat">
             <i class="fas fa-search"></i>
