update title based on selected model

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -39,7 +39,7 @@
       <div class="header">
         <span class="fas fa-robot"></span>
         <!-- Llama or related icon -->
-        <h1>Chat with llama3.1</h1>
+        <h1 id="chatTitle">Chat with llama</h1>
         <div class="button-group">
           <!-- Search Chat Button -->
           <button id="searchButton" title="Search Chat">
